--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 乌克兰-1.68MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇺🇸 美国-157.8KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 213.183.59.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇨🇳 中国-10.84MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.80MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.19MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-617.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇺🇸 美国-5.20MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.94MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-10.56MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 乌克兰-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-617.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 乌克兰-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-617.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 乌克兰-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-617.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 乌克兰-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-617.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 乌克兰-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-617.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 乌克兰-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-617.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 乌克兰-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-617.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
