--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-8.75MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc.jp.98848.xyz, port: 39814, type: vmess, uuid: fa3f6466-a3be-4e83-9f0e-f35680b2c79d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bai-piao-wang-zhe-iplc.jp.98848.xyz}}
-  - {name: 🇺🇸 美国-10.12MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.63MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.57MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-8.78MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc.jp.98848.xyz, port: 39813, type: vmess, uuid: fa3f6466-a3be-4e83-9f0e-f35680b2c79d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bai-piao-wang-zhe-iplc.jp.98848.xyz}}
+  - {name: 🇭🇰 香港-4.02MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.59MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-8.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-8.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-8.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-8.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-8.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-507.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活2天)中国-7.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
